Fixed table and exchange rate overflow on mobile

--- a/apps/mo-alt/styles.css
+++ b/apps/mo-alt/styles.css
@@ -735,7 +735,7 @@ body
         display: inline;
     }
 
-    .balances
+    .balances, .exchangeRates
     {
         height: unset;
     }   
@@ -744,5 +744,20 @@ body
     {
         flex-direction: column;
         align-items: left;
+    }
+
+    /*BLOCK DATA*/
+
+    .blockTable
+    {
+        padding-right: 0px;
+        padding-left: 0px;
+        margin: 0px;
+        width: 100%;
+    }
+
+    .blockTable td:nth-child(3)
+    {
+        width: 25%;
     }
 }
